# SearchEngine

./: Answers.md  DocumentParser.h  QueryEngine.cpp  QueryEngine.h  README.md  SearchEngine.cpp  rapidJSONExample.cpp
assignment-4-search-engine-segmentation-fault-main/: CMakeLists.txt  DSAVLTree.h  DocumentParser.cpp  IndexHandler.cpp  IndexHandler.h  SearchEngine.h  document.cpp  document.h  main.cpp  porter2_stemmer.cpp  porter2_stemmer.h  test_AVLTree.cpp
